--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h1 style="display: none;">Stephane Lima</h1>
         <section>
             <div class="cartao-vazio flex--centro cadastro-topo">
-                <h2 class="cartao__titulo">DELIMITE SEUS OBJETIVOS DE PESQUISA COMIGO!</h2>
-                <p class="cartao__subtitulo">Auxilio pesquisadores e professores da área jurídica a verem sentido em seus trabalhos através de uma formação profissional e humana de excelência.</p>
+                <h1 class="cartao__titulo">CHEGA DE FICAR PERDIDO QUANDO O ASSUNTO É DELIMITAÇÃO DE PESQUISA.</h1>
+                <h2 class="cartao__subtitulo">Conheça o método que já ajudou meus alunos, de graduandos a doutorandos, na delimitação de pesquisa e que vai te ajudar a ir para um outro nível, quando se fala em pesquisa acadêmica.</h2>
             </div>
         </section>
 
@@ -73,8 +73,8 @@
 
 
         <section class="cartao">
-            <h2 class="cartao__titulo-botao">Descubra seis áreas que você precisa levar em consideração para ter sucesso na delimitação de sua pesquisa acadêmica. </h2>
-            <h2 class="cartao__titulo-inscrever">Inscreva-se para receber o mapa mental:</h2>
+            <h2 class="cartao__titulo-botao">APRENDA DE UMA VEZ POR TODAS A DELIMITAR A SUA PESQUISA E SE DESTAQUE NO MUNDO ACADÊMICO.</h2>
+            <!-- <h2 class="cartao__titulo-inscrever">Inscreva-se para receber o mapa mental:</h2> -->
 
             <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
@@ -135,7 +135,7 @@
                                 name="b_c473ddfdfc377a9c051740fad_d35fb3291a" tabindex="-1" value=""></div>
                         <div class="optionalParent">
                             <div class="clear foot" style="display: flex;  justify-content: center;">
-                                <input type="submit" value="Receber material" name="subscribe"
+                                <input type="submit" value="Quero aprender a delimitar minha pesquisa" name="subscribe"
                                     id="mc-embedded-subscribe" class="botao" style="border-radius: 10px; width:400px" >
                                 <!-- <p class="brandingLogo"><a href="http://eepurl.com/hPs1-H" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p> -->
                             </div>
@@ -248,7 +248,7 @@
             <div class="cartao">
                 <h2 class="quemSomos__titulo">Olá, sou Stephane Hilda Barbosa Lima</h2>
                 <div class="quemSomos">
-                    <p class="quemsSomos__predescricao">Busco auxiliar pesquisadores e professores de direito a não sofrerem tanto e a criarem um plano de carreira que faça sentido para sua vida.</p>
+                    <p class="quemsSomos__predescricao">Mais que uma pesquisa, vou te auxiliar a ter uma verdadeira carreira na academia e no mercado. Vamos juntos?</p>
                     <p class="quemsSomos__predescricao" style="margin: 0 0 2rem 0;">Posso te ajudar?</p>
                     <div class="pessoa__imagem pessoa__imagem--stephane"></div>
                     <p class="quemsSomos__descricao">Professora universitária de Direitos Fundamentais na UNDB,
