--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <h1 style="display: none;">Stephane Lima</h1>
         <section>
             <div class="cartao-vazio flex--centro cadastro-topo">
-                <h1 class="cartao__titulo">CHEGA DE FICAR PERDIDO QUANDO O ASSUNTO É DELIMITAÇÃO DE PESQUISA.</h1>
-                <h2 class="cartao__subtitulo">Conheça o método que já ajudou meus alunos, de graduandos a doutorandos, na delimitação de pesquisa e que vai te ajudar a ir para um outro nível, quando se fala em pesquisa acadêmica.</h2>
+                <h2 class="cartao__titulo">CHEGA DE FICAR PERDIDO QUANDO O ASSUNTO É DELIMITAÇÃO DE PESQUISA.</h2>
+                <p class="cartao__subtitulo">Conheça o método que já ajudou meus alunos, de graduandos a doutorandos, na delimitação de pesquisa e que vai te ajudar a ir para um outro nível, quando se fala em pesquisa acadêmica.</p>
             </div>
         </section>
 
@@ -248,7 +248,7 @@
             <div class="cartao">
                 <h2 class="quemSomos__titulo">Olá, sou Stephane Hilda Barbosa Lima</h2>
                 <div class="quemSomos">
-                    <p class="quemsSomos__predescricao">Mais que uma pesquisa, vou te auxiliar a ter uma verdadeira carreira na academia e no mercado. Vamos juntos?</p>
+                    <p class="quemsSomos__predescricao">Mais que uma pesquisa, vou te auxiliar a ter uma verdadeira carreira na academia e no mercado. \nVamos juntos?</p>
                     <p class="quemsSomos__predescricao" style="margin: 0 0 2rem 0;">Posso te ajudar?</p>
                     <div class="pessoa__imagem pessoa__imagem--stephane"></div>
                     <p class="quemsSomos__descricao">Professora universitária de Direitos Fundamentais na UNDB,
@@ -264,6 +264,8 @@
                 </div>
             </div>
         </section>
+
+        <div class="_form_1"></div><script src="https://stephanelimamentora.activehosted.com/f/embed.php?id=1" type="text/javascript" charset="utf-8"></script>
     </main>
     <footer>
         <section class="cadastro-rodape">
