--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2 class="cartao__titulo-botao">APRENDA DE UMA VEZ POR TODAS A DELIMITAR A SUA PESQUISA E SE DESTAQUE NO MUNDO ACADÊMICO.</h2>
             <!-- <h2 class="cartao__titulo-inscrever">Inscreva-se para receber o mapa mental:</h2> -->
 
-            <div class="_form_1"></div><script src=formulario.js type="text/javascript" charset="utf-8"></script>
+            <div class="_form_1"></div><script src="js/formulario.js" type="text/javascript" charset="utf-8"></script>
             
             <!-- Begin Mailchimp Signup Form -->
             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
